# Capston_Node_Editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Capstone_node_editor.cpp  abstract_node.cpp  abstract_node.h  abstract_node_container.cpp  abstract_node_container.h  app.cpp  app.h  base_app.hpp  capstone_node_editor.cpp  evaluate_node_container.cpp  evaluate_node_container.h  float_addition_node_container.cpp  float_addition_node_container.h  float_node_container.cpp  float_node_container.h  glfw_app_base.hpp  link.hpp  node_attribute.hpp  node_base.h  node_base.hpp  node_canvas.cpp  node_canvas.h  node_editor.cpp  node_editor.h  nodes.cpp  nodes.h  plug.hpp  sdl_app_base.hpp
src/test/: test_nodes.cpp
